fix: fix button & select colors in light and dark mode

--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -7,5 +7,9 @@
 }
 
 .primary {
+  color: white;
   background-color: rgba(var(--accent-colors), 1);
+  &:active:after {
+    background-color: rgba(255, 255, 255, 0.15);
+  }
 }
